import { create } from "@bufbuild/protobuf";
import {
	GiftWithdrawFailedEventSchema,
	GiftWithdrawnEventSchema,
	GiftWithdrawRequestedEvent,
	GiftWithdrawRequestedEventSchema,
} from "@giftduels/protobuf-js/giftduels/gift/v1/events_pb";
import { ConsumeMessage } from "amqplib";
import { v4 as uuidv4 } from "uuid";
import type { AckControl } from "@/amqp/consumer";
import { publisher } from "@/amqp/publisher";
import { logger } from "@/logger";
import { Userbot } from "@/telegram/userbot/Userbot";
import { decodeProtobufMessage } from "@/utils/decodeProtobufMessage";

const MAX_RETRIES = 3;

// –•–µ–ª–ø–µ—Ä –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è failedEvent - –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤–æ –≤—Å–µ—Ö —Å–ª—É—á–∞—è—Ö –æ—à–∏–±–æ–∫
async function createAndPublishFailedEvent(
	event: GiftWithdrawRequestedEvent,
	errorReason: string,
	attemptsMade: number,
	log: typeof logger,
): Promise<void> {
	try {
		const failedEvent = create(GiftWithdrawFailedEventSchema, {
			$typeName: GiftWithdrawFailedEventSchema.typeName,
			giftId: event.giftId,
			ownerTelegramId: event.ownerTelegramId,
			telegramGiftId: event.telegramGiftId,
			collectibleId: event.collectibleId,
			title: event.title,
			slug: event.slug,
			upgradeMessageId: event.upgradeMessageId,
			price: event.price,
			commissionAmount: event.commissionAmount,
			errorReason,
			attemptsMade,
		});

		const messageId = uuidv4();

		await publisher.publishProto({
			routingKey: "gift.withdraw.failed",
			schema: GiftWithdrawFailedEventSchema,
			msg: failedEvent,
			opts: {
				messageId,
			},
		});

		log.info("üì§ –°–æ–±—ã—Ç–∏–µ –æ–± –æ—à–∏–±–∫–µ –æ–ø—É–±–ª–∏–∫–æ–≤–∞–Ω–æ –≤ poison queue");
	} catch (publishErr) {
		log.error(
			{ publishErr },
			"‚ùå –ö—Ä–∏—Ç–∏—á–µ—Å–∫–∞—è –æ—à–∏–±–∫–∞ –ø—Ä–∏ –ø—É–±–ª–∏–∫–∞—Ü–∏–∏ failedEvent",
		);
	}
}

export async function handleGiftWithdrawRequested(
	msg: Buffer,
	properties: ConsumeMessage["properties"],
	ctrl: AckControl,
	userbot: Userbot,
): Promise<void> {
	// 1) –°–∫–æ–ª—å–∫–æ —É–∂–µ –±—ã–ª–æ –ø–æ–ø—ã—Ç–æ–∫?
	const prevAttempts = Number(properties.headers?.["x-attempts"] ?? 0);

	// 2) –ü—Ä–æ–±—É–µ–º –¥–µ—Å–µ—Ä–∏–∞–ª–∏–∑–æ–≤–∞—Ç—å
	const event = decodeProtobufMessage<GiftWithdrawRequestedEvent>(
		msg,
		GiftWithdrawRequestedEventSchema,
	);
	if (!event) {
		logger.warn(
			{ messageId: properties.messageId, attempts: prevAttempts },
			"‚ö†Ô∏è –ù–µ —Å–º–æ–≥–ª–∏ –¥–µ–∫–æ–¥–∏—Ä–æ–≤–∞—Ç—å Protobuf ‚Äî —É–±–∏—Ä–∞–µ–º –∏–∑ –æ—á–µ—Ä–µ–¥–∏",
		);
		return ctrl.fail(); // —Å–±—Ä–∞—Å—ã–≤–∞–µ–º –±–µ–∑ retry
	}

	// 3) –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ–±—è–∑–∞—Ç–µ–ª—å–Ω—ã–µ –ø–æ–ª—è
	const giftId = event.giftId?.value;
	const ownerTelegramId = event.ownerTelegramId?.value;
	const upgradeMessageId = event.upgradeMessageId;

	if (!giftId || !ownerTelegramId || !upgradeMessageId) {
		logger.error(
			{
				messageId: properties.messageId,
				attempts: prevAttempts,
				giftId,
				ownerTelegramId,
				upgradeMessageId,
			},
			"‚ùå –í —Ç–µ–ª–µ —Å–æ–±—ã—Ç–∏—è –Ω–µ—Ç –Ω–µ–æ–±—Ö–æ–¥–∏–º—ã—Ö –ø–æ–ª–µ–π ‚Äî —Å–æ–∑–¥–∞–µ–º failedEvent",
		);

		await createAndPublishFailedEvent(
			event,
			`Missing required fields: giftId=${giftId}, ownerTelegramId=${ownerTelegramId}, upgradeMessageId=${upgradeMessageId}`,
			prevAttempts + 1,
			logger,
		);

		return ctrl.fail();
	}

	const log = logger.child({ giftId, ownerTelegramId, upgradeMessageId });

	try {
		log.info("üéÅ –ü—ã—Ç–∞–µ–º—Å—è –≤—ã–≤–µ—Å—Ç–∏ –ø–æ–¥–∞—Ä–æ–∫ —á–µ—Ä–µ–∑ Telegram API");
		await userbot.transferGift({
			userId: Number(ownerTelegramId),
			messageId: upgradeMessageId,
			giftId: giftId,
			telegramGiftId: Number(event.telegramGiftId?.value),
			collectibleId: event.collectibleId,
			title: event.title,
			slug: event.slug,
		});

		const withdrawnEvent = create(GiftWithdrawnEventSchema, {
			$typeName: GiftWithdrawnEventSchema.typeName,
			slug: event.slug,
			title: event.title,
			giftId: event.giftId,
			ownerTelegramId: event.ownerTelegramId,
			telegramGiftId: event.telegramGiftId,
			collectibleId: event.collectibleId,
		});

		await publisher.publishProto({
			routingKey: "telegram.gift.withdrawn",
			schema: GiftWithdrawnEventSchema,
			msg: withdrawnEvent,
			opts: {
				messageId: uuidv4(),
			},
		});

		log.info("‚úÖ –ü–æ–¥–∞—Ä–æ–∫ —É—Å–ø–µ—à–Ω–æ –≤—ã–≤–µ–¥–µ–Ω");

		return ctrl.ack();
	} catch (err) {
		log.error({ err, attempts: prevAttempts }, "‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ");

		// transient-–æ—à–∏–±–∫–∞? —Ä–µ—à–∞–µ–º –ø–æ —á–∏—Å–ª—É –ø–æ–ø—ã—Ç–æ–∫
		if (prevAttempts < MAX_RETRIES) {
			log.info({ nextAttempt: prevAttempts + 1 }, "üîÑ –ë—É–¥–µ–º –ø–æ–≤—Ç–æ—Ä—è—Ç—å –ø–æ–ø—ã—Ç–∫—É");
			return ctrl.retry();
		} else {
			log.error(
				{ attempts: prevAttempts },
				`‚ö†Ô∏è –ü—Ä–µ–≤—ã—à–µ–Ω–æ ${MAX_RETRIES} –ø–æ–≤—Ç–æ—Ä–æ–≤ ‚Äî –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º –≤ poison queue`,
			);

			await createAndPublishFailedEvent(
				event,
				`Failed after ${MAX_RETRIES} attempts: ${err instanceof Error ? err.message : String(err)}`,
				prevAttempts + 1,
				log,
			);

			return ctrl.fail();
		}
	}
}
